Mise à jour oaisis-java sans secrets